--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.16.3"
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "json-server": "^0.16.3",
+    "typescript": "^4.6.4"
   }
 }
